--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -7,13 +7,22 @@ edition = "2021"
 [package.metadata]
 cargo-fuzz = true
 
+[features]
+ethereum-types = ["dep:ethereum-types", "const-varint/ethereum-types"]
+primitive-types = ["dep:primitive-types", "const-varint/primitive-types"]
+ruint = ["dep:ruint", "const-varint/ruint"]
+
 [dependencies]
 arbitrary = { version = "1", features = ["derive"] }
 libfuzzer-sys = "0.4"
 paste = "1"
+ethereum-types = { version = "0.15", features = ["arbitrary"], optional = true }
+primitive-types = { version = "0.13", features = ["arbitrary"], optional = true }
+ruint = { version = "1", features = ["arbitrary"], optional = true }
 
 [dependencies.const-varint]
 path = ".."
+
 
 [[bin]]
 name = "varint"
@@ -21,3 +30,27 @@ path = "fuzz_targets/varint.rs"
 test = false
 doc = false
 bench = false
+
+[[bin]]
+name = "ethereum-types"
+path = "fuzz_targets/ethereum_types.rs"
+test = false
+doc = false
+bench = false
+required-features = ["ethereum-types"]
+
+[[bin]]
+name = "primitive-types"
+path = "fuzz_targets/primitive_types.rs"
+test = false
+doc = false
+bench = false
+required-features = ["primitive-types"]
+
+[[bin]]
+name = "ruint"
+path = "fuzz_targets/ruint.rs"
+test = false
+doc = false
+bench = false
+required-features = ["ruint"]
