--- a/.github/workflows/fuzzy.yml
+++ b/.github/workflows/fuzzy.yml
@@ -39,6 +39,23 @@ jobs:
         run: |
           cargo fuzz build
           cargo fuzz run varint -- -max_total_time=300
+  fuzz-non-zero:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly
+          
+      - name: Install cargo-fuzz
+        run: cargo install cargo-fuzz
+
+      - name: Run fuzzing
+        run: |
+          cargo fuzz build
+          cargo fuzz run non-zero-varint -- -max_total_time=300
 
   fuzz-ethereum-types:
     runs-on: ubuntu-latest
