--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,8 @@ quickcheck_macros = "1"
 ruint_1 = { package = "ruint", version = "1", features = ["arbitrary", "quickcheck"] }
 primitive-types_0_13 = { package = "primitive-types", version = "0.13", features = ["arbitrary"] }
 ethereum-types_0_15 = { package = "ethereum-types", version = "0.15", features = ["arbitrary"] }
+time_0_3 = { package = "time", version = "0.3", features = ["quickcheck"] }
+chrono_0_4 = { package = "chrono", version = "0.4", features = ["arbitrary"] }
 
 [profile.bench]
 opt-level = 3
