--- a/.github/workflows/fuzzy.yml
+++ b/.github/workflows/fuzzy.yml
@@ -109,3 +109,39 @@ jobs:
         run: |
           cargo fuzz build
           cargo fuzz run ruint --features ruint -- -max_total_time=300
+  
+  fuzz-chrono:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly
+          
+      - name: Install cargo-fuzz
+        run: cargo install cargo-fuzz
+
+      - name: Run fuzzing
+        run: |
+          cargo fuzz build
+          cargo fuzz run chrono --features chrono -- -max_total_time=300
+
+  fuzz-time:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly
+          
+      - name: Install cargo-fuzz
+        run: cargo install cargo-fuzz
+
+      - name: Run fuzzing
+        run: |
+          cargo fuzz build
+          cargo fuzz run time --features chrono,time -- -max_total_time=300
