--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -12,6 +12,7 @@ ethereum-types = ["dep:ethereum-types", "const-varint/ethereum-types"]
 primitive-types = ["dep:primitive-types", "const-varint/primitive-types"]
 ruint = ["dep:ruint", "const-varint/ruint"]
 chrono = ["dep:chrono", "const-varint/chrono"]
+time = ["dep:time", "chrono", "const-varint/time"]
 
 [dependencies]
 arbitrary = { version = "1", features = ["derive"] }
@@ -21,6 +22,7 @@ ethereum-types = { version = "0.15", features = ["arbitrary"], optional = true }
 primitive-types = { version = "0.13", features = ["arbitrary"], optional = true }
 ruint = { version = "1", features = ["arbitrary"], optional = true }
 chrono = { version = "0.4", optional = true, features = ["arbitrary"] }
+time = { version = "0.3", optional = true, features = ["large-dates"] }
 
 [dependencies.const-varint]
 path = ".."
@@ -71,3 +73,11 @@ test = false
 doc = false
 bench = false
 required-features = ["chrono"]
+
+[[bin]]
+name = "time"
+path = "fuzz_targets/time.rs"
+test = false
+doc = false
+bench = false
+required-features = ["time", "chrono"]
