--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,12 +30,20 @@ primitive-types = ["primitive-types_0_13"]
 ethereum-types_0_15 = ["dep:ethereum-types_0_15", "ruint"]
 ethereum-types = ["ethereum-types_0_15"]
 
+chrono_0_4 = ["dep:chrono_0_4"]
+chrono = ["chrono_0_4"]
+
+time_0_3 = ["dep:time_0_3"]
+time = ["time_0_3"]
+
 [dependencies]
 thiserror = { version = "2", default-features = false }
 paste = "1"
 seq-macro = "0.3"
 
+chrono_0_4 = { package = "chrono", version = "0.4", default-features = false, optional = true }
 ruint_1 = { package = "ruint", version = "1", default-features = false, optional = true }
+time_0_3 = { package = "time", version = "0.3", default-features = false, optional = true }
 arbitrary-int_1 = { package = "arbitrary-int", version = "1", default-features = false, optional = true }
 primitive-types_0_13 = { package = "primitive-types", version = "0.13", default-features = false, optional = true }
 ethereum-types_0_15 = { package = "ethereum-types", version = "0.15", default-features = false, optional = true }
@@ -47,6 +55,8 @@ quickcheck_macros = "1"
 ruint_1 = { package = "ruint", version = "1", features = ["arbitrary", "quickcheck"] }
 primitive-types_0_13 = { package = "primitive-types", version = "0.13", features = ["arbitrary"] }
 ethereum-types_0_15 = { package = "ethereum-types", version = "0.15", features = ["arbitrary"] }
+time_0_3 = { package = "time", version = "0.3", features = ["quickcheck"], default-features = false }
+chrono_0_4 = { package = "chrono", version = "0.4", features = ["arbitrary"], default-features = false }
 
 [profile.bench]
 opt-level = 3
