--- a/.github/workflows/fuzzy.yml
+++ b/.github/workflows/fuzzy.yml
@@ -199,3 +199,20 @@ jobs:
         run: |
           cargo fuzz build
           cargo fuzz run arbitrary-int --features arbitrary-int -- -max_total_time=300
+  fuzz-bnum:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly
+          
+      - name: Install cargo-fuzz
+        run: cargo install cargo-fuzz
+
+      - name: Run fuzzing
+        run: |
+          cargo fuzz build
+          cargo fuzz run bnum --features bnum -- -max_total_time=300
