--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "varing"
-version = "0.4.0"
+version = "0.4.1"
 edition = "2021"
 repository = "https://github.com/al8n/varing"
 homepage = "https://github.com/al8n/varing"
 documentation = "https://docs.rs/varing"
-description = "Protobuf's varint encoding/decoding with full const context operations supports."
+description = "Protobuf's varint encoding/decoding for LEB128 friendly types with full const context operations supports."
 license = "MIT OR Apache-2.0"
 rust-version = "1.81.0"
 keywords = ["leb128", "varint", "protobuf"]
-categories = ["no-std", "data-structures", "network-programming"]
+categories = ["no-std", "no-std::no-alloc", "encoding", "data-structures", "network-programming"]
 
 [workspace]
 members = [".", "fuzz"]
